--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Noreplyz",
   "license": "MIT",
   "dependencies": {
-    "discord.js": "^12.5.1",
+    "discord.js": "12",
     "irc-upd": "^0.11.0"
   }
 }
