Separate hit log feeds, fix config update

--- a/config.sample.json
+++ b/config.sample.json
@@ -75,6 +75,7 @@
 	"defaultConfig": {
 		"info": "No description was provided.",
 		"showWikiInFeed": true,
+		"isHitLogFeed": false,
 		"displayCondensed": false,
 		"useWebhooks": false
 	}
